:lipstick: Add spacer to prevent menu overflow for report page

--- a/Week 08/CaseStudyPt4/assets/css/style.css
+++ b/Week 08/CaseStudyPt4/assets/css/style.css
@@ -193,3 +193,12 @@ td.total {
 td p {
 	margin: 0;
 }
+
+
+/*----------------------------------------------------------------------------*\
+	ADMIN
+\*----------------------------------------------------------------------------*/
+
+#spacer {
+	height: 10em;
+}
